# StankinScheduleEditor2

./: .gitignore  CMakeLists.txt  README.md  StankinScheduleEditor2.sln  StankinScheduleEditor2.vcxproj  StankinScheduleEditor2.vcxproj.filters
cmake/: functions.cmake
include/: stdafx.cpp  stdafx.h
res/: res.qrc
res/sets/: classrooms.txt  lecturers.txt  titles.txt
res/transition/: transition.txt
src/: main.cpp  scheduleHeaderView.cpp  scheduleHeaderView.h  stankinScheduleEditor2.cpp  stankinScheduleEditor2.h  stankinScheduleEditor2.ui
src/forms/: stankinScheduleEditor2.ui
src/model/: schedule.cpp  schedule.h  scheduleDay.cpp  scheduleDay.h
src/model/pair/: date.cpp  date.h  dateItem.cpp  dateItem.h  dateRange.cpp  dateRange.h  dateSingle.cpp  dateSingle.h  dayOfWeek.cpp  dayOfWeek.h  frequency.cpp  frequency.h  pair.cpp  pair.h  pairException.cpp  pairException.h  subgroup.cpp  subgroup.h  time_.cpp  time_.h  type.cpp  type.h
src/schedule/: schedule.cpp  schedule.h  scheduleDay.cpp  scheduleDay.h
src/schedule/pair/: dateRange.cpp  dateRange.h  dateSingle.cpp  dateSingle.h  dayOfWeek.cpp  dayOfWeek.h  frequency.cpp  frequency.h  pair.cpp  pair.h  pairException.h  subgroup.cpp  subgroup.h  time_.cpp  time_.h  type.cpp  type.h
src/ui/: stankinScheduleEditor2.cpp  stankinScheduleEditor2.h  stankinScheduleEditor2.ui
src/ui/editor/: dateEditorDialog.cpp  dateEditorDialog.h  dateEditorDialog.ui  pairEditorDialog.cpp  pairEditorDialog.h  pairEditorDialog.ui  pairSelectorDialog.cpp  pairSelectorDialog.h  pairSelectorDialog.ui
src/ui/export/: exportDialog.cpp  exportDialog.h  exportDialog.ui  exportWorker.cpp  exportWorker.h  exportWorkerManager.cpp  exportWorkerManager.h  exporter.cpp  exporter.h  weeklyExporter.cpp  weeklyExporter.h
src/ui/import/: confuseDialog.cpp  confuseDialog.h  confuseDialog.ui  importDialog.cpp  importDialog.h  importDialog.ui  parseFileException.cpp  parseFileException.h  parseHighlighter.cpp  parseHighlighter.h  parseWorker.cpp  parseWorker.h  parseWorkerManager.cpp  parseWorkerManager.h  pooplerWrapper.cpp  pooplerWrapper.h  popplerWrapper.cpp  popplerWrapper.h  setsDialog.cpp  setsDialog.h  setsDialog.ui  tesseractWrapper.cpp  tesseractWrapper.h  transitionDialog.cpp  transitionDialog.h  transitionDialog.ui
src/view/: scheduleHorizontalHeader.cpp  scheduleHorizontalHeader.h  scheduleVerticalHeader.cpp  scheduleVerticalHeader.h
test/: json_cmp.py  json_transformator.py
